# pytest-rerunfailures

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CODEOWNERS  CONTRIBUTING.rst  HEADER.rst  MANIFEST.in  README.md  README.rst  auto-publish-release3.sh  pyproject.toml  pytest_cleanrerun.py  pytest_rerunfailures.py  setup.cfg  setup.py  test_pytest_cleanrerun.py  test_pytest_rerunfailures.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: cli.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  mark.rst  quickstart.rst
jarvis-autotest/: test3.sh  test3_junit_pr.sh  test_junit_pr.sh
rerunfailures/: plugin.py
src/: pytest_rerunfailures.py
tests/: base.py  conftest.py  test_config.py  test_functionality.py  test_junit_report.py  test_method_states.py  test_pytest_rerunfailures.py  test_rerun_stats.py  test_tests_1.py  test_tests_2.py  test_xdist_comp.py
tests/setup/: conftest.py  test_flakey_setup.py
tests/setup/fail/: conftest.py  test_setup_failures.py
tests/teardown/fail/: conftest.py  test_teardown_failures.py
tests/teardown/flakey/: conftest.py  test_flakey_teardown.py  test_flkey_teardown.py
